--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -6,6 +6,9 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": false,
+    "noImplicitAny": false,
+    "suppressDefaultLibCheck": true,
+    "noEmit": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
