--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -36,10 +36,12 @@
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/platform-socket.io": "^11.1.12",
     "@nestjs/swagger": "^7.1.16",
-    "@nestjs/websockets": "^10.3.0",
+    "@nestjs/websockets": "^10.4.22",
     "@prisma/client": "^5.7.1",
     "@types/passport-jwt": "^4.0.1",
+    "@types/socket.io": "^3.0.1",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.3.2",
     "class-transformer": "^0.5.1",
@@ -48,7 +50,7 @@
     "helmet": "^7.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "socket.io": "^4.7.2",
+    "socket.io": "^4.8.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
